burgermenu z-index fix

--- a/css/stylesBurger.scss
+++ b/css/stylesBurger.scss
@@ -16,7 +16,7 @@ $fontSizeMenu : 18px;
   justify-content: center;
   white-space: pre-line;
 
-  z-index: 9999;
+  z-index: 399;
 
 
 
